--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="C:/Users/jmccurry/Minecraft/Vault.jar"/>
-	<classpathentry kind="lib" path="D:/Documents/Downloads/Reconstruct/PermissionsEx-1.14-package/Permissions.jar"/>
-	<classpathentry kind="lib" path="D:/Documents/Downloads/Reconstruct/PermissionsEx-1.14-package/PermissionsEx.jar"/>
-	<classpathentry kind="lib" path="D:/Documents/Downloads/craftbukkit-1.2.5-R1.0.jar"/>
+	<classpathentry kind="lib" path="D:/Documents/Downloads/craftbukkit-1.2.5-R2.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://jd.bukkit.org/doxygen/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
