--- a/plugin.yml
+++ b/plugin.yml
@@ -66,7 +66,10 @@ commands:
     usage: /<command> {player}
   jail:
     description: Jail player
-    usage: /<command> <set/pardon/player> {player}
+    usage: /<command> (set) {player}
+  pardon:
+    description: Release a Player
+    usage: /<command> {player}
   tempjail:
     description: Temporary Jail Player
     usage: /<command> {player} (-s/-a) {amt} {sec/min/hour/day} {Reason}
