--- a/config.yml
+++ b/config.yml
@@ -12,7 +12,11 @@ mysql-table-ip: banlistip
 sqlite-dbname: banlist
 #parameters#
 auto-complete: true
+#delete dat on ban#
 CleanOnBan: true
+#kick on max ping#
+KickMaxPing: true
+MaxPing: 200
 #Max allowable fine#
 #If Zero then no max will be placed#
 maxFineAmt: 0
