--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/jmccurry/Minecraft/Vault.jar"/>
-	<classpathentry kind="lib" path="D:/Documents/Downloads/craftbukkit-1.3.1-R0.1-20120804.230427-22.jar"/>
-	<classpathentry kind="output" path="bin"/>
+
+    <classpathentry
+        kind="src"
+        path="src" />
+
+    <classpathentry
+        kind="con"
+        path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6" />
+
+    <classpathentry
+        kind="lib"
+        path="C:/Users/jmccurry/Minecraft/Vault.jar" />
+
+    <classpathentry
+        kind="lib"
+        path="D:/Documents/Downloads/craftbukkit-1.3.1-R0.1-20120804.230427-22.jar" />
+
+    <classpathentry
+        kind="output"
+        path="bin" />
+
 </classpath>
