--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,10 +1,10 @@
-name: UltraBan
-version: 1.1.2
+name: Ultrabans
+version: 1.0.3
 website: http://modcrafting.com
 author: Deathmarine
 description: >
              Administration Plugin for Bukkit.
-main: com.modcrafting.ultrabans.UltraBan
+main: com.modcrafting.ultrabans.Ultrabans
 commands:
 #Actions#
   ban:
